User administration and api documentation
